[package]
name = "rust-gtk-dependencies"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.17.1"
gdk-sys = "0.17.0"
glib = "0.17.9"
glib-sys = "0.17.4"
gtk4 = "0.6.6"
pango = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "pango" }
